Small changes and add shiny app

--- a/Case-Study-1-Group-4.html
+++ b/Case-Study-1-Group-4.html
@@ -369,6 +369,7 @@ is located, the alcohol by volume (ABV) of the beer, the International
 Bitterness Units (IBU) of the beer, and the style of the beer. We will
 predominately be focusing on the ABV and IBU of the beer, as well as the
 style of the beer.</p>
+<p>For an interactive app to visualize this data, please see: <a href="https://nicksager.shinyapps.io/CaseStudy1/">Shiny App</a></p>
 </div>
 <div id="read-the-data" class="section level2">
 <h2>Read the Data</h2>
